# glplot

./: AUTHORS  Makefile.am  configure.ac
include/: Makefile.am
include/glplot/: core.hh  core2d.hh  curve.hh  debug.hh  figure.hh  font.hh  imagesc.hh  misc.hh  plot2d.hh
pkgconfig/: libglplot.pc.in
src/: Makefile.am  core.cc  core2d.cc  curve.cc  font.cc  imagesc.cc  misc.cc  plot2d.cc
src/glsl/: font.frag.glsl  font.geom.glsl  font.vert.glsl  imagesc.frag.glsl  imagesc.vert.glsl  plot2d.frag.glsl  plot2d.geom.glsl  plot2d.vert.glsl
src/qt/: Makefile.am  Makefile.in  figure.cpp  glwidget.cpp  glwidget.h  glwidget.moc.hpp  window.cpp  window.h  window.moc.cpp  window.moc.hpp
test/: Makefile.am  main.cpp  test
